# py365

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
py365/: __init__.py  app_connection.py  graph365.py  invitation_manager.py  py365.py
py365/api/: __init__.py  invitation_manager.py  planner.py  users.py
py365/apis/: __init__.py  invitation_manager.py  users.py
py365/auth/: __init__.py  adal_connection.py  app_connection.py  msal_connection.py
py365/base_types/: __init__.py  email_address.py  recipient.py
py365/core/: __init__.py  app_connection.py  utils.py
py365/data/: __init__.py  _base_data.py  assigned_license.py  base_data.py  directory_object.py  email_address.py  group.py  identity.py  identity_set.py  invitation.py  invited_user_message_info.py  item_body.py  message.py  on_premises_provisioning_error.py  password_profile.py  planner_applied_categories.py  planner_assignment.py  planner_bucket.py  planner_plan.py  planner_task.py  recipient.py  user.py
py365/enums/: __init__.py  body_type.py  connection_types.py  enums.py  group_category.py  group_type.py  group_user_types.py  group_visibility.py  invitation_status_values.py  invited_user_types.py  user_types.py
py365/identity_and_access/: __init__.py  invitation_manager.py
py365/resources/: __init__.py  _base_resource.py  _child_resource.py  assigned_license.py  base_resource.py  bucket_api.py  directory_objects.py  email_address.py  groups.py  invitation.py  invitation_manager.py  invited_user_message_info.py  password_profile.py  plan_api.py  planner.py  recipient.py  user.py  users.py
py365/rsc/: __init__.py  _base_resource.py  assigned_license.py  email_address.py  identity.py  (+10 more)
test/: main.py
(+5 files in other folders)
